<resources>
    <string name="app_name">果子App</string>
    <string name="hello_world">Hello world!</string>
    <string name="strPoint">小圆点</string>
    <string name="agree">确定</string>
    <string name="strWelLogo">欢迎Logo</string>
    <string name="strWelcomeToMain">欢迎来到主页</string>
    <string name="strWelcome">欢迎回来</string>
    <string name="strWelcomeEn">Welcome back</string>
    <string name="phone">+86</string>
    <string name="phoneNumber">请输入您的手机号..</string>
    <string name="emailNumber">请输入您的邮箱..</string>
    <string name="accountNumber">请输入您的帐号..</string>
    <string name="password">请输入您的密码..</string>
    <string name="mima">密码</string>
    <string name="usernamelogin">用户名登录</string>
    <string name="register">注册账号</string>
    <string name="loading">正在加载数据</string>
    <string name="registering">正在注册中</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="forgetpasswordEn">Forget password</string>
    <string name="newpasswork">请输入您的新密码</string>
    <string name="strWelcomeJoin">欢迎加入</string>
    <string name="invite_message">填写邀请码可增加好友与自己的每日观影次数</string>
    <string name="password_hint">有6-20位字母或数字组成</string>
    <string name="user_protocal"><u>&lt;用户注册协议&gt;</u></string>
    <string name="channel_title_tuijian">推荐</string>
    <string name="channel_title_hot">热门标签</string>
    <string name="channel_title_like">猜你喜欢</string>
    <string name="setting_clearcache_title">清理缓存</string>
    <string name="setting_clearcache_content">已经成功清理缓存</string>
    <string name="setting_clearcache_confirm">是否清理当前APP的缓存？</string>
</resources>
