<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipChildren="false"
    android:background="@mipmap/login_bg">

    <LinearLayout
        android:id="@+id/layout_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@mipmap/back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_welcome"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layout_back"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/strWelcome"
            android:textColor="@color/common_yellow"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/strWelcomeEn"
            android:textColor="@color/common_yellow"
            android:textSize="12sp" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:clipChildren="false"
        android:layout_below="@id/layout_welcome"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_jiange"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:background="#00000000"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/layout_main"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#ffffff"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@mipmap/denglutouxiang"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:text="+86"
                    android:textSize="12sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:background="#dcdcdc" />

                <EditText
                    android:id="@+id/mobile_login"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:hint="@string/phoneNumber"
                    android:inputType="number"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="top"
                android:background="#dcdcdc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:text="@string/mima"
                    android:textSize="12sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="7dp"
                    android:background="#dcdcdc" />

                <EditText
                    android:id="@+id/mobile_password"
                    android:layout_width="220dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/login_see"
                    android:layout_width="20dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="5dp"
                    android:background="@mipmap/see" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="top"
                android:background="#dcdcdc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/password_remember"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/passhint"
                    android:checked="true"
                    android:text="记住密码"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/password_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="140dp"
                    android:text="忘记密码？"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="-15dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/login_btn"
                android:tag="2"
                android:translationZ="2dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_end"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="end"
            android:background="#00000000"
            android:orientation="vertical"/>
    </RelativeLayout>



    <RelativeLayout
        android:layout_below="@id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:checked="true"
            android:text="@string/usernamelogin"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </RelativeLayout>
</RelativeLayout>
