<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/tuiguangbeijing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@mipmap/back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/strWelcome"
            android:textColor="@android:color/white"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_marginLeft="30dp"
            android:text="@string/strWelcomeEn"
            android:textColor="@android:color/white"
            android:textSize="15dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@mipmap/denglutouxiang"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:text="用户名"
                    android:textSize="10dp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:background="#dcdcdc"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="10dp" />

                <EditText
                    android:id="@+id/mobile_login"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:hint="请输入用户名.."
                    android:inputType="number"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc"
                android:layout_gravity="top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="33dp"
                    android:text="@string/mima"
                    android:textSize="10dp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:background="#dcdcdc"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="7dp" />

                <EditText
                    android:id="@+id/mobile_password"
                    android:layout_width="220dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/login_see"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@mipmap/see" />

            </LinearLayout>

            <View
                android:layout_gravity="top"
                android:layout_width="match_parent"
                android:background="#dcdcdc"
                android:layout_height="1dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:text="记住密码"
                    android:id="@+id/password_remember"
                    android:layout_below="@+id/passhint"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:checked="true"
                    android:textSize="15dp"/>
                <TextView
                    android:id="@+id/password_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="忘记密码？"
                    android:layout_marginLeft="140dp"
                    android:textSize="15dp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@mipmap/login_btn"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:layout_gravity="right"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="电话号码登录"
            android:id="@+id/username_login"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:checked="true"
            android:textColor="@android:color/white"
            android:textSize="15dp"/>
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginLeft="200dp"
            android:textColor="@android:color/white"
            android:textSize="15dp" />
    </LinearLayout>
</LinearLayout>