<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipChildren="false"
    android:background="@mipmap/login_bg">

    <LinearLayout
        android:id="@+id/layout_register_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@mipmap/back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_register_welco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_register_back"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/strWelcomeJoin"
            android:textColor="@color/common_yellow"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="30dp"
            android:text="Welcome join"
            android:textColor="@color/common_yellow"
            android:textSize="12sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_register_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layout_register_welco"
        android:background="#00000000"
        android:clipChildren="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_register_begin"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#00000000"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/layout_register_core"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#ffffff"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@mipmap/denglutouxiang"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:text="邀请码"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/register_invite"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:hint="（可选填）填写获得观影特权"
                    android:inputType="number"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="top"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginStart="20dp"
                android:background="#FFA500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/invite_message"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:text="+86"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:background="#dcdcdc" />

                <EditText
                    android:id="@+id/register_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:hint="@string/phoneNumber"
                    android:inputType="phone"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="top"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"
                android:background="#FFA500" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/firstCheckNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/secondCheckNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/thirdCheckNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/fourthCheckNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/register_get_code"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/dp_34"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@mipmap/get_code" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="130dp"
                android:layout_marginStart="@dimen/dp_10"
                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="top"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="#FFA500" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="top"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="#FFA500" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="top"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginStart="10dp"

                    android:layout_weight="1"
                    android:background="#FFA500" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="top"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="#FFA500" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:text="@string/mima"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="7dp"
                    android:background="#dcdcdc" />

                <EditText
                    android:id="@+id/register_password_new"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/register_see"
                    android:layout_width="20dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="@dimen/dp_50"
                    android:layout_marginTop="5dp"
                    android:background="@mipmap/see" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="top"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"
                android:background="#dcdcdc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/password_hint"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="-15dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/register" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_register_end"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="end"
            android:background="#00000000"
            android:orientation="vertical" />
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/layout_register_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/register_protocal"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="60dp"
            android:checked="false"
            android:text="我已阅读并同意"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/user_protocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/user_protocal"
            android:textColor="@color/common_yellow"
            android:textSize="15sp" />
    </LinearLayout>


</RelativeLayout>